# eos

libraries/: CMakeLists.txt
libraries/clusterapi/: CMakeLists.txt
libraries/clusterapi/include/clusterapi/: clusterapi.hpp
plugins/producer_plugin/: CMakeLists.txt  producer_plugin.cpp
plugins/producer_plugin/include/eosio/producer_plugin/: producer_plugin.hpp
scripts/: eosio_build_ubuntu.sh
